--- a/package.json
+++ b/package.json
@@ -1,24 +1,42 @@
 {
-  "name": "color-idle",
-  "version": "1.0.0",
-  "description": "An incremental based on gaining colors",
-  "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^6.2.2"
-  },
+  "name": "color-idle-rewritten",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "test"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Buck4437/color-idle.git"
+  "dependencies": {
+    "core-js": "^3.6.5",
+    "vue": "^2.6.11"
   },
-  "author": "Buck4437",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Buck4437/color-idle/issues"
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-template-compiler": "^2.6.11"
   },
-  "homepage": "https://github.com/Buck4437/color-idle#readme"
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
